Wed Nov  5 10:53:22 MET 1997   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Fix memory leaks on seen hash table and returned SV refs.

	Storable did not work properly when tainting enabled.

	Fixed "Allocation too large" messages in freeze/thaw and added.
	proper regression test in t/freeze.t.

Tue Jun  3 09:41:33 METDST 1997   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Updated version number

	Added freeze/thaw interface and dclone.

Fri May 16 10:45:47 METDST 1997   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Forgot that AutoLoader does not export its own AUTOLOAD.
	I could use

		use AutoLoader 'AUTOLOAD';
	
	but that would not be backward compatible. So the export is
	done by hand...

Tue Mar 25 11:21:32 MET 1997   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Empty scalar strings are now "defined" at retrieval time.

	New test to ensure an empty string is defined when retrieved.

Thu Feb 27 16:32:44 MET 1997   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Updated version number

	Declare VERSION as being used

	Fixed a typo in the PerlIO_putc remapping.
	PerlIO_read and perlIO_write inverted size/nb_items.
	(only relevant for pre-perl5.004 versions)

Thu Feb 27 15:58:31 MET 1997   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Updated version number

	Added VERSION identification

	Allow build with perl5.003, which is ante perlIO time

Mon Jan 13 17:53:18 MET 1997   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Random code fixes.

Wed Jan 22 15:19:56 MET 1997   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Updated version number in Makefile.PL.

	Added "thanks to" section to README.

	Documented new forgive_me variable.

	Made 64-bit clean.

	Added forgive_me support to allow store() of data structures
	containing non-storable items like CODE refs.
